Update Simulasi_Pulsa.java