@@ -1,144 +1,215 @@
+// #comment coder: rafli
 import java.text.NumberFormat;
 import java.util.*;
 
 public class Simulasi_Pulsa {
 
+    // ==== MODEL & STORAGE (tetap sederhana, pakai yang sudah ada) ====
+
+    // #comment coder: rafli
     static class Akun {
         String msisdn, pin; int saldo; boolean aktif = true;
         List<String> paket = new ArrayList<>();
         Akun(String n, String p, int s){ msisdn=n; pin=p; saldo=s; }
     }
-    static class Paket {
-        int kode, harga; String nama, masa;
-        Paket(int k, String n, int h, String m){ kode=k; nama=n; harga=h; masa=m; }
-    }
 
+    // #comment coder: rafli
     static final Map<String, Akun> DB = new HashMap<>();
-    static final Map<Integer, Paket> KATALOG = new LinkedHashMap<>();
     static final List<String> LOG = new ArrayList<>();
-    static final NumberFormat RUPIAH = NumberFormat.getInstance(Locale.of("id", "ID"));
+    static final NumberFormat RUPIAH = NumberFormat.getInstance(new Locale("id", "ID"));
 
-    
+    // ==== ENTRYPOINT ====
+
     public static void main(String[] a){
-        seed(); 
+        seed();
+
         Scanner sc = new Scanner(System.in);
 
+        // PSPEC 1.0 — Memulai Layanan Beli Masa Aktif
+        // Pre: Pengguna kirim *858# dari kartu aktif
         String msisdn = ask(sc,"Masukkan nomor Anda: ");
-        if (!DB.containsKey(msisdn) || !DB.get(msisdn).aktif){ System.out.println("Nomor tidak aktif/terdaftar."); return; }
+        if (!DB.containsKey(msisdn) || !DB.get(msisdn).aktif){
+            System.out.println("Nomor tidak aktif/terdaftar."); return;
+        }
+        if (!"*858#".equals(ask(sc,"Ketik *858# untuk mulai: "))) {
+            System.out.println("Dial salah."); return;
+        }
+        // Post: Sistem tampilkan menu utama layanan (persis PSPEC)
+        loopMenuUtama(sc, msisdn);
+    }
 
-        if (!"*858#".equals(ask(sc,"Ketik *858# untuk mulai: "))) { System.out.println("Dial salah."); return; }
+    // ==== MENU UTAMA (PSPEC 1.0, 1.1) ====
 
+    // #comment coder: rafli — PSPEC 1.0/1.1
+    static void loopMenuUtama(Scanner sc, String msisdn){
         while (true){
-            switch (menu(sc)) {
-                case 1 -> cekPulsa(sc, msisdn);
-                case 2 -> transfer(sc, msisdn);
-                case 3 -> beliPaket(sc, msisdn);
+            System.out.println("\n--- *858# MENU UTAMA ---");
+            System.out.println("1. Transfer Pulsa");
+            System.out.println("2. Masa Aktif");          // target PSPEC 1.1 -> user pilih 2
+            System.out.println("3. Minta Pulsa");
+            System.out.println("4. Auto TP");
+            System.out.println("5. Delete Auto TP");
+            System.out.println("6. List Auto TP");
+            System.out.println("7. Cek Kupon Undian TP");
+            System.out.println("0. Keluar");
+            int pilih = askInt(sc,"Pilih: ");
+
+            switch (pilih){
                 case 0 -> { System.out.println("Sesi ditutup. Terima kasih."); return; }
-                default -> System.out.println("Pilihan tidak dikenal.");
+                case 2 -> { // PSPEC 1.1 — Memilih Menu Masa Aktif
+                    // Pre: Sistem tampilkan menu utama
+                    // Post: User pilih 2 dan sistem proses
+                    menuBeliMasaAktif_Hal1(sc, msisdn);
+                }
+                default -> {
+                    System.out.println("Fitur belum tersedia di simulasi. Pilih 2 untuk 'Masa Aktif'.");
+                }
             }
         }
     }
 
-    // Menu Utama
-    static int menu(Scanner sc){
-        System.out.println("\n--- *858# MENU UTAMA ---");
-        System.out.println("1. Cek Pulsa\n2. Transfer Pulsa\n3. Beli Paket\n0. Keluar");
-        return askInt(sc,"Pilih: ");
+    // ==== BELI MASA AKTIF — HALAMAN 1 (PSPEC 1.2, 1.3) ====
+
+    // #comment coder: rafli — PSPEC 1.2: Menampilkan Menu Beli Masa Aktif (Hal.1)
+    static void menuBeliMasaAktif_Hal1(Scanner sc, String msisdn){
+        while (true){
+            System.out.println("\n--- BELI MASA AKTIF (Hal.1) ---");
+            System.out.println("1. 5hr/Rp2500");
+            System.out.println("2. 10hr/Rp4rb");
+            System.out.println("3. 15hr/Rp6rb");
+            System.out.println("4. 30hr/Rp14rb");
+            System.out.println();
+            System.out.println("5. 90hr/Rp33rb");
+            System.out.println("6. 180hr/Rp62rb");
+            System.out.println("7. Next");     // PSPEC 1.3 — Memilih Menu Next
+            System.out.println("0. Home");     // kembali ke menu utama
+            System.out.println("10. Gift");
+            int pilih = askInt(sc,"Pilih: ");
+
+            if (pilih == 0) return;           // balik ke menu utama (Post-condition 1.2 tercapai)
+            if (pilih == 7) {
+                // PSPEC 1.3 — Post: sistem memproses permintaan Next
+                menuBeliMasaAktif_Hal2(sc, msisdn);
+                return; // setelah selesai Hal.2, balik ke Home (bisa diubah sesuai preferensi)
+            } else if (pilih == 10){
+                System.out.println("Gift belum disimulasikan. Pilih 7 untuk Next sesuai PSPEC.");
+            } else if (pilih >=1 && pilih <=6){
+                System.out.println("Untuk tugas ini, jalur utama: 7 (Next) -> 1 (300hr/Rp97rb).");
+            } else {
+                System.out.println("Pilihan tidak dikenal.");
+            }
+        }
     }
 
-    // Cek Pulsa
-    static void cekPulsa(Scanner sc, String msisdn){
+    // ==== BELI MASA AKTIF — HALAMAN 2 (PSPEC 1.4, 1.5) ====
+
+    // #comment coder: rafli — PSPEC 1.4: Menampilkan Menu Beli Masa Aktif Lanjutan (Hal.2)
+    static void menuBeliMasaAktif_Hal2(Scanner sc, String msisdn){
+        while (true){
+            System.out.println("\n--- BELI MASA AKTIF (Hal.2) ---");
+            System.out.println("1. 300hr/Rp97rb");   // PSPEC 1.5 — Menu yang dipilih
+            System.out.println("2. 330hr/Rp106rb");
+            System.out.println("3. 306hr/Rp115rb");
+            System.out.println("9. Back");
+            int pilih = askInt(sc,"Pilih: ");
+
+            if (pilih == 9) {
+                // Back ke Hal.1
+                return;
+            } else if (pilih == 1) {
+                // PSPEC 1.5 — Pre: Hal.2 tampil, Post: user pilih 1 dan sistem proses
+                konfirmasiBeliMasaAktif(sc, msisdn, 300, 97_000);
+                return;
+            } else if (pilih == 2) {
+                konfirmasiBeliMasaAktif(sc, msisdn, 330, 106_000);
+                return;
+            } else if (pilih == 3) {
+                konfirmasiBeliMasaAktif(sc, msisdn, 306, 115_000);
+                return;
+            } else {
+                System.out.println("Pilihan tidak dikenal.");
+            }
+        }
+    }
+
+    // ==== KONFIRMASI (PSPEC 1.6, 1.7) ====
+
+    // #comment coder: rafli — PSPEC 1.6: Menampilkan Konfirmasi Pembelian 300hr/97rb
+    static void konfirmasiBeliMasaAktif(Scanner sc, String msisdn, int hari, int harga){
+        System.out.println("\n--- KONFIRMASI BELI MASA AKTIF ---");
+        System.out.println(hari + "hr/Rp" + RUPIAH.format(harga));
+        System.out.println("1. Ya");   // PSPEC 1.7 — Memilih Menu Ya
+        System.out.println("9. Back");
+        System.out.println("0. Home");
+
+        int pilih = askInt(sc,"Pilih: ");
+        if (pilih == 9) {
+            // kembali ke Hal.2
+            return;
+        }
+        if (pilih == 0) {
+            // kembali ke Home
+            return;
+        }
+        if (pilih != 1){
+            System.out.println("Dibatalkan."); return;
+        }
+
+        // ==== EKSEKUSI (PSPEC 1.8 & 1.9) ====
+        // PSPEC 1.8 — Pembelian: kirim ke “server operator” (simulasi: cek saldo)
+        // PSPEC 1.9 — Berhasil/Gagal: tampilkan hasil dari “server operator”
+        prosesPembelianMasaAktif(sc, msisdn, hari, harga);
+    }
+
+    // ==== PROSES KE “SERVER OPERATOR” (PSPEC 1.8, 1.9) ====
+
+    // #comment coder: rafli — PSPEC 1.8/1.9: Proses & hasil
+    static void prosesPembelianMasaAktif(Scanner sc, String msisdn, int hari, int harga){
         Akun a = DB.get(msisdn);
-        System.out.println("\n--- CEK PULSA ---");
-        System.out.println("Nomor      : " + a.msisdn);
-        System.out.println("Sisa Saldo : Rp " + RUPIAH.format(a.saldo));
-        System.out.println("Paket aktif: " + (a.paket.isEmpty()? "-" : String.join(", ", a.paket)));
+
+        if (a.saldo < harga){
+            // GAGAL
+            String tx = UUID.randomUUID().toString().substring(0,8).toUpperCase();
+            LOG.add(String.format("TX:%s BUY:MASA_AKTIF FAIL MSISDN:%s HARGA:%d SISA:%d DURASI:%d",
+                    tx, msisdn, harga, a.saldo, hari));
+            System.out.println("\nTransaksi GAGAL: Saldo tidak mencukupi.");
+            System.out.println("Saldo Anda: Rp " + RUPIAH.format(a.saldo));
+            back(sc);
+            return;
+        }
+
+        // BERHASIL
+        a.saldo -= harga;
+        String tx = UUID.randomUUID().toString().substring(0,8).toUpperCase();
+        LOG.add(String.format("TX:%s BUY:MASA_AKTIF OK MSISDN:%s HARGA:%d SISA:%d DURASI:%d",
+                tx, msisdn, harga, a.saldo, hari));
+
+        System.out.println("\nPembelian berhasil!");
+        System.out.println("Masa aktif bertambah " + hari + " hari (simulasi).");
+        System.out.println("Sisa saldo: Rp " + RUPIAH.format(a.saldo));
+        System.out.println("ID Transaksi: " + tx);
         back(sc);
     }
 
-    // Transfer Pulsa
-    static void transfer(Scanner sc, String from){
-        final int FEE = 1_000, SALDO_MIN = 5_000, MIN = 1_000, MAX = 1_000_000;
 
-        while (true){
-            System.out.println("\n--- TRANSFER PULSA ---\n0. Kembali");
-            String to = ask(sc,"Nomor tujuan: "); if (to.equals("0")) return;
-            int nom = parseMoney(ask(sc,"Nominal (Rp): ")); if (nom == -1) { System.out.println("Nominal tidak valid."); continue; }
-            String pin = ask(sc,"PIN: "); if (pin.equals("0")) return;
-
-            if (!DB.containsKey(to) || !DB.get(to).aktif){ System.out.println("E01: Nomor tujuan tidak aktif/terdaftar."); continue; }
-            if (from.equals(to))                      { System.out.println("E01: Tidak boleh ke nomor sendiri.");     continue; }
-            if (nom < MIN || nom > MAX || nom % 1000 != 0){
-                System.out.println("E03: Nominal 1.000–1.000.000 & kelipatan 1.000."); continue;
-            }
-
-            Akun A = DB.get(from), B = DB.get(to);
-            if (!A.pin.equals(pin)) { System.out.println("E04: PIN salah."); continue; }
-            int total = nom + FEE;
-            if (A.saldo - total < SALDO_MIN) { 
-                System.out.println("E02: Saldo kurang (wajib sisa Rp " + RUPIAH.format(SALDO_MIN) + ")."); 
-                continue; 
-            }
-
-            A.saldo -= total; B.saldo += nom;
-            String tx = UUID.randomUUID().toString().substring(0,8).toUpperCase();
-            LOG.add(String.format("TX:%s FROM:%s TO:%s NOM:%d FEE:%d SISA:%d", tx, from, to, nom, FEE, A.saldo));
-
-            System.out.println("\nBerhasil transfer Rp " + RUPIAH.format(nom) + " ke " + to + 
-                " (Fee Rp " + RUPIAH.format(FEE) + ").");
-            System.out.println("Sisa saldo: Rp " + RUPIAH.format(A.saldo));
-            System.out.println("ID Transaksi: " + tx);
-            back(sc);
-            return;
-        }
-    }
-
-    // Beli Paket
-    static void beliPaket(Scanner sc, String msisdn){
-        Akun a = DB.get(msisdn);
-        while (true){
-            System.out.println("\n--- BELI PAKET ---");
-            KATALOG.values().forEach(p -> System.out.printf("%d. %s - Rp %s (%s)%n",
-                    p.kode, p.nama, RUPIAH.format(p.harga), p.masa));
-            System.out.println("0. Kembali");
-            int k = askInt(sc,"Pilih paket: "); if (k==0) return;
-
-            Paket p = KATALOG.get(k);
-            if (p == null){ System.out.println("Kode paket tidak ada."); continue; }
-            if (a.saldo < p.harga){ System.out.println("Saldo kurang. Saldo: Rp " + RUPIAH.format(a.saldo)); continue; }
-
-            int y = askInt(sc, "Konfirmasi beli " + p.nama + " (Rp " + RUPIAH.format(p.harga) + ")? 1=Ya/0=Back: ");
-            if (y != 1) continue;
-
-            a.saldo -= p.harga; a.paket.add(p.nama + " (" + p.masa + ")");
-            String tx = UUID.randomUUID().toString().substring(0,8).toUpperCase();
-            LOG.add(String.format("TX:%s BUY:%s MSISDN:%s HARGA:%d SISA:%d", tx, p.nama, msisdn, p.harga, a.saldo));
-
-            System.out.println("\nPembelian berhasil!");
-            System.out.println("Paket aktif: " + p.nama + " (" + p.masa + ")");
-            System.out.println("Sisa saldo : Rp " + RUPIAH.format(a.saldo));
-            System.out.println("ID Transaksi: " + tx);
-            back(sc);
-            return;
-        }
-    }
-
-    // Code Tambahan
     static String ask(Scanner sc, String p){ System.out.print(p); return sc.nextLine().trim(); }
+
+
     static int askInt(Scanner sc, String p){
-        while (true){ try { return Integer.parseInt(ask(sc,p)); } catch(Exception e){ System.out.println("Input angka tidak valid."); } }
+        while (true){
+            try { return Integer.parseInt(ask(sc,p)); }
+            catch(Exception e){ System.out.println("Input angka tidak valid."); }
+        }
     }
-    static int parseMoney(String s){ try { return Integer.parseInt(s.replace(".","").replace(",","")); } catch(Exception e){ return -1; } }
-    static void back(Scanner sc){ System.out.println("\n0. Kembali"); while (askInt(sc,"Pilih: ") != 0) System.out.println("Tekan 0 untuk kembali."); }
+
+    static void back(Scanner sc){
+        System.out.println("\n0. Home");
+        while (askInt(sc,"Pilih: ") != 0) System.out.println("Tekan 0 untuk kembali ke Home.");
+    }
 
     static void seed(){
         DB.put("081234567890", new Akun("081234567890","1234",120_000));
         DB.put("089876543210", new Akun("089876543210","0000", 25_000));
         DB.put("081111111111", new Akun("081111111111","9999",  7_500));
-
-        KATALOG.put(1,new Paket(1,"Paket Data 5GB",      25_000,"7 hari"));
-        KATALOG.put(2,new Paket(2,"Paket Data 12GB",     50_000,"30 hari"));
-        KATALOG.put(3,new Paket(3,"Paket Nelpon 200mnt", 15_000,"7 hari"));
-        KATALOG.put(4,new Paket(4,"Combo 10GB+200mnt",   60_000,"30 hari"));
     }
 }
